// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders component 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c1 {
  width: 100%;
  border: 1px solid #88989E;
  padding: 12px 16px;
  outline: 0;
  border-radius: 12px;
}

<input
  class="c0 c1"
  name="name"
  placeholder="Nome"
  type="text"
  value="test"
/>
`;

exports[`<TextField /> when field is valid when field is invalid displays the respective error message 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1.25;
}

.c1 {
  width: 100%;
  border: 1px solid #88989E;
  padding: 12px 16px;
  outline: 0;
  border-radius: 12px;
}

<input
  class="c0 c1"
  name="email"
  placeholder="E-mail"
  type="text"
  value="samemail@email.com"
/>
`;
